# promptGit

./: .env.example  .gitignore  LICENSE  README.md  info.txt  pyproject.toml  requirements.txt  sample.txt
.github/workflows/: publish.yml
src/: main.py
src/ai/: llm_providers.py
src/config/: config.py
src/misc/: heading.py
src/promptgitx/: __init__.py  main.py
src/promptgitx/ai/: __init__.py  chat_agent.py  chat_graph.py  graph_state.py  json_utils.py  llm_provider.py  pr_analyzer.py  report_builder.py  review_graph.py
src/promptgitx/config/: __init__.py  config.py  paths.py
src/promptgitx/gitcodes/: __init__.py  command_runner.py  diff_fetcher.py  diff_parser.py  git_info.py
src/promptgitx/misc/: analyzer_help.py  console.py  heading.py
src/promptgitx/prompts/: __init__.py  chat_agent_prompts.py  review_prompts.py
src/promptgitx/reports/: __init__.py  docx_writer.py  formatter.py  pdf_writer.py  saver.py
tests/: test_git_workflow_execution.py
