[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgitx"
version = "0.1.0"
description = "AI-powered Git commit assistant and PR analyzer."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AbhinavA_04" }
]
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pyfiglet>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]
keywords = ["git", "cli", "ai", "commit", "review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
promptgitx = "promptgitx.main:main"

[tool.setuptools.packages.find]
where = ["src"]
