[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgitx"
version = "0.7.0"
description = "AI-powered Git commit assistant and PR analyzer."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "AbhinavA_04", email = "abhinavajay2004@gmail.com" }
]
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pyfiglet>=1.0.0",
    "python-docx>=1.1.2",
    "reportlab>=4.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]
keywords = ["git", "cli", "ai", "commit", "review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
promptgitx = "promptgitx.main:main"

[project.urls]
Homepage = "https://github.com/abhinava-max/promptGit"
Issues = "https://github.com/abhinava-max/promptGit/issues"
Source = "https://github.com/abhinava-max/promptGit"

[tool.setuptools.packages.find]
where = ["src"]
