[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptgitx"
version = "0.8.2"
description = "PromptGitX: AI Git Assistant for Reviews, Reports, and Workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "AbhinavA_04", email = "abhinavajay2004@gmail.com" }
]
dependencies = [
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pyfiglet>=1.0.0",
    "python-docx>=1.1.2",
    "reportlab>=4.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]
keywords = ["git", "github", "cli", "ai", "code-review", "analyzer", "llm", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "twine>=5.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
promptgitx = "promptgitx.main:main"

[project.urls]
Homepage = "https://github.com/abhinava-max/promptGit"
Issues = "https://github.com/abhinava-max/promptGit/issues"
Source = "https://github.com/abhinava-max/promptGit"

[tool.setuptools.packages.find]
where = ["src"]
